# Robotex2016

./: .gitignore  CMakeLists.txt  README.md  configuration.ini
Computer/: CMakeLists.txt  configuration.ini  test.cpp
Computer/calibration/: fyysikum0111_2.ini  fyysikum0112a.ini  fyysikum0112b.ini  fyysikum0112c.ini  fyysikum0112d.ini  fyysikum0112e.ini  fyysikum1310.ini  fyysikum1411_10.ini  fyysikum1411_11.ini  fyysikum1411_2.ini  fyysikum1411_6.ini  fyysikum1411_7.ini  fyysikum1411_yellow2.ini  fyysikum1711.ini  fyysikum1811.ini  fyysikum2210_3.ini  fyysikum2211.ini  fyysikum2810.ini  fyysikum2911.ini  fyysikum3110.ini  imagetest.ini  yhikas.ini  yhikas2.ini
Computer/lib/: capture.cc  capture.h
Computer/src/: AI.cpp  AI.h  Blob.cpp  Blob.h  Calibrator.cpp  Calibrator.h  Communicator.cpp  Communicator.h  Detector.cpp  Detector.h  FloatPoint.cpp  FloatPoint.h  PID.cpp  PID.h  common.h  kernels.cl  main.cpp
Motherboard/lib/motor/: motor.cpp  motor.h
Motherboard/src/: main.cpp
Tools/: checkerboard-x.txt  checkerboard.txt  distances.py  distances_x.py  distances_y.py
calibration/: fyysikum.ini
lib/: simpleini.h
src/: Calibrator.cpp  Calibrator.h  Detector.cpp  Detector.h  main.cpp
